--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div class="links">
         <a class="link" href="https://defly.app" target="_blank">
-            <i class="fab fa-house">&nbsp;</i>Website
+            <i class="fa-solid fa-house">&nbsp;</i>Website
         </a>
         <a class="link" href="https://twitter.com/deflyapp" target="_blank">
             <i class="fab fa-twitter">&nbsp;</i>Twitter
