--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <i class="fa-brands fa-google-play">&nbsp;</i>Google Play
         </a>
         <a class="link" href="https://docs.defly.app/app/overview" target="_blank">
-            <i class="fab fa-book">&nbsp;</i>Whitepaper
+            <i class="fa-solid fa-book">&nbsp;</i>Whitepaper
         </a>
        
     </div>
