--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <i class="fab fa-youtube">&nbsp;</i>YouTube
         </a>
         <a class="link" href="https://apps.apple.com/us/app/defly/id1602672723" target="_blank">
-            <i class="fa-brands fa-app">&nbsp;</i>App Store
+            <i class="fa-brands fa-app-store-ios">&nbsp;</i>App Store
         </a>
         <a class="link" href="https://play.google.com/store/apps/details?id=io.blockshake.defly.app" target="_blank">
             <i class="fa-brands fa-google-play">&nbsp;</i>Google Play
