--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Defly Wallet</title>
     <link rel="stylesheet" href="defly.css">
     <script src="https://kit.fontawesome.com/6bee25835f.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="images/profile.jpg" type="image/x-icon" />
+    <link rel="icon" href="defly.png" type="image/x-icon" />
 </head>
 
 <body>
     <a class="profilePicture">
-        <img src="images/profile.jpg" alt="Profile Picture">
+        <img src="defly.png" alt="Profile Picture">
     </a>
     
     <div class="userName">
