--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="card">
     <a class="profilePicture">
         <img src="defly.png" alt="Profile Picture">
     </a>
@@ -51,7 +52,7 @@
         <a class="link" href="https://docs.defly.app/app/overview" target="_blank">
             <i class="fa-solid fa-book">&nbsp;</i>Whitepaper
         </a>
-       
+     </div>
     </div>
 
 </body>
